--- a/plugins/nf-co2footprint/src/resources/assets/CO2FootprintReportTemplate.html
+++ b/plugins/nf-co2footprint/src/resources/assets/CO2FootprintReportTemplate.html
@@ -386,6 +386,14 @@ ${ assets_js.join("\n\n\n\n").replaceAll("(?m)^", '    ') }
     </div>
   </div>
 
+  <% if (used_EM_api) { %>
+  <div class="container">
+    <h2 id="CI" class="section">Carbon intensity fluctuation</h2>
+    <div id="ci_plot"></div>
+    <p class="mt-3 mb-3">This plot shows the carbon intensity fluctuation during workflow computation.</p>
+  </div>
+  <% } %>
+
   <!-- Footer -->
   <footer>
     <div class="container-fluid">
