--- a/plugins/nf-co2footprint/src/resources/assets/CO2FootprintReportTemplate.html
+++ b/plugins/nf-co2footprint/src/resources/assets/CO2FootprintReportTemplate.html
@@ -320,12 +320,12 @@ ${ assets_js.join("\n\n\n\n").replaceAll("(?m)^", '    ') }
     </div>
   </div>
 
-  <!-- CI fluctuation plot -->
+  <!-- CI records plot -->
   <% if (used_EM_api) { %>
   <div class="container">
-    <h2 id="ci-heading" class="section">Carbon intensity fluctuation</h2>
+    <h2 id="ci-heading" class="section">Carbon intensity records</h2>
     <div id="ci-plot"></div>
-    <p class="mt-3 mb-3">This plot shows the carbon intensity fluctuation during workflow computation.</p>
+    <p class="mt-3 mb-3">This plot shows the carbon intensity fluctuation during workflow computation. Additionally, the usage of the assigned CPU during task computation is displayed, to indicate the system load at the respective time.</p>
   </div>
   <% } %>
 
