--- a/plugins/nf-co2footprint/src/resources/assets/CO2FootprintReportTemplate.html
+++ b/plugins/nf-co2footprint/src/resources/assets/CO2FootprintReportTemplate.html
@@ -325,7 +325,7 @@ ${ assets_js.join("\n\n\n\n").replaceAll("(?m)^", '    ') }
   <div class="container">
     <h2 id="ci-heading" class="section">Carbon intensity records</h2>
     <div id="ci-plot"></div>
-    <p class="mt-3 mb-3">This plot shows the carbon intensity fluctuation during workflow computation. Additionally, the usage of the assigned CPU during task computation is displayed, to indicate the system load at the respective time.</p>
+    <p class="mt-3 mb-3">This plot shows the carbon intensity (CI) fluctuation during workflow computation with an additional window of +/- 24h, representing the used CI. Additionally, the usage of the assigned CPU during task computation is displayed, to indicate the system load at the respective time.</p>
   </div>
   <% } %>
 
